<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/business_personInfromation"
        android:showAsAction="never"
        android:title="@string/business_menu_personInfromation"/>
    <item
        android:id="@+id/business_bind"
        android:showAsAction="never"
        android:title="@string/business_menu_bind"/>
    <item
        android:id="@+id/business_opinion"
        android:showAsAction="never"
        android:title="@string/business_menu_opinion"/>
    <item
        android:id="@+id/business_cheakNewVersion"
        android:showAsAction="never"
        android:title="@string/business_menu_cheakNewVersion"/>
    <item
        android:id="@+id/business_aboutUs"
        android:showAsAction="never"
        android:title="@string/business_menu_about"/>
    <item
        android:id="@+id/business_exit"
        android:showAsAction="never"
        android:title="@string/business_menu_exit"/>
    <item
        android:id="@+id/business_settings"
        android:showAsAction="never"
        android:title="@string/business_menu_settings"/>

</menu>