<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:hint="@string/register_login_hint"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/register_login_hint_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_login"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:hint="@string/register_login_hint_hint"
        android:textColor="#FF0000"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_login"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/register_pass_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/register_password_hint_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:hint="@string/register_password_hint_hint"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_password_resure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/register_pass_resure_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_password_resure"
        android:layout_marginTop="17dp"
        android:hint="@string/register_emailaddress_hint"
        android:inputType="textWebEmailAddress"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_chkcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/register_chkcode_hint"
        android:inputType="text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/register_chkcodeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/register_email"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/register_chkcode"
        android:layout_toRightOf="@+id/register_chkcode"
        android:onClick="chkcodeButtonClick"
        android:text="@string/register_cancelButton"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/register_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_chkcodeButton"
        android:hint="@string/register_hint_hint" />

    <Button
        android:id="@+id/register_submitButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/register_chkcodeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/register_chkcodeButton"
        android:layout_below="@+id/register_chkcode"
        android:layout_marginLeft="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="27dp"
        android:onClick="submitButtonClick"
        android:text="@string/register_okButton"
        android:textSize="12sp" />

</RelativeLayout>