<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/bind_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:hint="@string/bind_login_hint"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/bind_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bind_login"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/bind_password_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/bind_hint_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bind_password"
        android:layout_marginTop="7dp"
        android:hint="@string/bind_modify_hint"
        android:textColor="#FF0000"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/bind_oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bind_password"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/bind_oldPassword_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/bind_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bind_oldPassword"
        android:layout_marginTop="7dp"
        android:hint="@string/bind_email_hint"
        android:inputType="textWebEmailAddress"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bind_submit_button"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bind_email"
        android:layout_centerVertical="true"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="17dp"
        android:onClick="submit"
        android:text="@string/bind_submitBotton" />

</RelativeLayout>