<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/register_01_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="17dp"
        android:hint="@string/register_01_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/register_01_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_01_email"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:hint="@string/register_01_hint_hint"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_chkcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_01_email"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/register_01_chkcode_hint"
        android:inputType="text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/register_chkcodeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/register_01_email"
        android:layout_marginTop="57dp"
        android:layout_toEndOf="@+id/register_chkcode"
        android:layout_toRightOf="@+id/register_chkcode"
        android:onClick="chkcodeButtonClick_01"
        android:text="@string/register_01_getChkcodeButton"
        android:textSize="12sp" />

    <Button
        android:id="@+id/register_submitButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_chkcode"
        android:layout_marginTop="17dp"
        android:onClick="submitButtonClick_01"
        android:text="@string/register_01_submitButton"
        android:textSize="12sp" />

</RelativeLayout>