<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/bind_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:hint="@string/register_02_login_hint"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/register_02_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bind_login"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/register_02_pass_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/bind_oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_02_password"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/register_02_pass_resure_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/register_02_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bind_oldPassword"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="7dp"
        android:hint="@string/register_02_hint" />

    <Button
        android:id="@+id/register_submitButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_02_hint"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="17dp"
        android:onClick="submitButtonClick_02"
        android:text="@string/register_02_okButton"
        android:textSize="12sp" />

</RelativeLayout>