<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.runcom.tuoyouvpn.MainActivity" >

    <Button
        android:id="@+id/main_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_editText_account"
        android:layout_alignRight="@+id/main_editText_account"
        android:layout_alignTop="@+id/main_editText_password"
        android:layout_centerVertical="true"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginTop="57dp"
        android:onClick="register"
        android:text="@string/main_register" />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_editText_account"
        android:layout_alignStart="@+id/main_editText_account"
        android:layout_alignTop="@+id/main_editText_password"
        android:layout_centerVertical="true"
        android:layout_marginLeft="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="57dp"
        android:onClick="login"
        android:text="@string/main_login" />

    <EditText
        android:id="@+id/main_editText_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:drawablePadding="57dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/main_account_hint"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/main_editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_editText_account"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/main_password_hint"
        android:inputType="textPassword" >
    </EditText>

</RelativeLayout>